Changes for 2.2.4rc1

New features:
.......... [ZBX-7811] added example robots.txt file (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Romanian, Russian, Slovak and Spanish translations; thanks to Zabbix translators (Richlv)
........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)

Bug fixes:
........S. [ZBX-8181] fixed possible entering of "history syncer" process in an eternal loop when processing IT services (dimir)
..F....... [ZBX-8176] fixed SQL errors while mass operations when using Oracle database (Krists)
..F....... [ZBX-8158] fixed disabled hosts not shown in trigger selection popup when in configuration (Krists)
..F....... [ZBX-7553] fixed graph not getting period when coming from screen (Krists)
..F....... [ZBX-8075] fixed triggers/data without application not showing in overview (Krists)
..F....... [ZBX-8111] fixed possible XSS in tables with vertical header row cells (Krists)
........S. [ZBX-7887] fixed calculated item becoming not found if referenced item becomes not supported (igors)
..F....... [ZBX-8100] fixed map mass deletion using Oracle (Eduard)
..F....... [ZBX-8148] fixed maintenance warning message on php < 5.4 versions (Eduard)
...G...... [ZBX-8108] fixed reading /proc virtual files without rewinding the file position (Juris)
.......PS. [ZBX-8115] added workaround for 64 bit integer binding not working with Oracle versions less than 11.2 (wiper)
..F....... [ZBX-8140] added net.udp.listen key to item popup (Eduard)
..F....... [ZBX-8123] fixed form fields show/hide switching in IE9 (Eduard)
..F....... [ZBX-8083] fixed proxy performance query item conditions to be same as in dashboard (Krists)
..F....... [ZBX-8021] fixed password changing for users with internal authentication (Eduard)
........S. [ZBX-8133] fixed possible deadlock while updating host_inventory table (Sasha)
..F....... [ZBX-8104] fixed inverted case sensitivity for regular expressions (Krists)