@@ -877,18 +877,6 @@ darwin*|rhapsody*)
 	;;
 *solaris*)
 	ARCH="solaris"
-	dnl Forcing a 64-bit application for a 64-bit Solaris
-	dnl A 32-bit program that uses /proc is able to look at 32-bit processes,
-	dnl but is not able to understand all attributes of a 64-bit process.
-	AC_MSG_CHECKING(for -m64 compilation flag)
-	saved_CFLAGS="$CFLAGS"
-	CFLAGS="-m64"
-	AC_TRY_RUN(
-	[int main(void) {return 0;}],
-	CFLAGS="-m64 $saved_CFLAGS"
-	AC_MSG_RESULT(yes),
-	CFLAGS="$saved_CFLAGS"
-	AC_MSG_RESULT(no))
 	;;
 hpux*)
 	ARCH="hpux"
@@ -933,15 +921,41 @@ if test "x$ARCH" = "xlinux"; then
 	esac
 fi
 
-dnl Low Level Discovery needs a way to get the list of network
-dnl interfaces available on the monitored system. On HP-UX systems
-dnl that way depends on the OS version.
+if test "x$ARCH" = "xsolaris"; then
+	dnl Forcing a 64-bit application for a 64-bit Solaris
+	dnl A 32-bit program that uses /proc is able to look at 32-bit processes,
+	dnl but is not able to understand all attributes of a 64-bit process.
+	AC_MSG_CHECKING(for -m64 compilation flag)
+	saved_CFLAGS="$CFLAGS"
+	CFLAGS="-m64"
+	AC_TRY_RUN(
+	[int main(void) {return 0;}],
+	CFLAGS="-m64 $saved_CFLAGS"
+	AC_MSG_RESULT(yes),
+	CFLAGS="$saved_CFLAGS"
+	AC_MSG_RESULT(no))
+fi
+
 if test "x$ARCH" = "xhpux"; then
+	dnl Low Level Discovery needs a way to get the list of network
+	dnl interfaces available on the monitored system. On HP-UX systems
+	dnl that way depends on the OS version.
 	hpux_version=${host_os#hpux}
 	hpux_major=${hpux_version%.*}
 	hpux_minor=${hpux_version#*.}
 
 	AC_DEFINE_UNQUOTED([HPUX_VERSION], $hpux_major$hpux_minor, [Define to HP-UX version])
+
+	dnl This API level is needed so that "utsname.nodename" is not truncated.
+	AC_MSG_CHECKING(for -D_HPUX_API_LEVEL=20040821 compilation flag)
+	saved_CFLAGS="$CFLAGS"
+	CFLAGS="-D_HPUX_API_LEVEL=20040821"
+	AC_TRY_RUN(
+	[int main(void) {return 0;}],
+	CFLAGS="-D_HPUX_API_LEVEL=20040821 $saved_CFLAGS"
+	AC_MSG_RESULT(yes),
+	CFLAGS="$saved_CFLAGS"
+	AC_MSG_RESULT(no))
 fi
 
 AC_DEFINE_UNQUOTED([ARCH], "${ARCH}", [Define to OS name for code managing])
